# ChangeLog for dev-ruby/spring
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/spring/ChangeLog,v 1.3 2015/04/17 05:42:52 graaff Exp $

*spring-1.3.4 (17 Apr 2015)

  17 Apr 2015; Hans de Graaff <graaff@gentoo.org> +spring-1.3.4.ebuild:
  Version bump.

  09 Sep 2014; Hans de Graaff <graaff@gentoo.org> spring-1.1.3.ebuild:
  Add missing dependency on new enough rubygems version.

*spring-1.1.3 (06 Jun 2014)

  06 Jun 2014; Hans de Graaff <graaff@gentoo.org> +spring-1.1.3.ebuild,
  +metadata.xml:
  Initial import.
