@@ -3,14 +3,16 @@ Hash: SHA256
 
 DIST spring-1.1.3.gem 39936 SHA256 92aa8cf28fec20b0f760e2cf8efd1990be2c30c2e79167cdd19e8344420b72c5 SHA512 35896e920db3407115d8421700e36205ef08c7741ce91e95444923c298649d892f592fc5353290d2ab9f5cad65ff537356623999553cd9b272cc25370c9e0ab1 WHIRLPOOL e6da85e381af8ad139fe293c3b70f7e9673d18dff3e3a6322186b81fb3c5fdb4f67a01df9076c1737793ed2eff0d342ee09079b8d2094ff0c187aa3cfd9954d5
 DIST spring-1.3.4.tar.gz 37443 SHA256 e71e5d3503efbb297bbc19d554c4acae092348f9f8d4df7204948469248679d3 SHA512 6ea5ce07acfcfd1f9cbfbc00764e83e89b76483852beb31b9ef85d7827962e46031a90089dfefb4aad39d4844df9fab1f5664ed4833f6c7a83da472feac01e56 WHIRLPOOL fb471a064c6ac89b6549f132972b125b6ae374e550652be1b56a6e952bd6bbdd7486d46e414b24288d4f41b7fddb1655b2776696024be4c83d49766247a30136
+DIST spring-1.3.6.tar.gz 37583 SHA256 5d72ac77755119c96560cd10b2040a85685d0558c9ad9ed96fd2cd442bdd1ae6 SHA512 7f9468202d93d0507a5a04bd1dac4fb4b830d636d3863d1d3b69d8c54de40bab804c0088445ff3690bc6b602c6b8a6e785af0da39bda9218223af05ba2d0ee42 WHIRLPOOL c8eb25bc9896f0b7bfabef1dcbc920fe4c15ade48c99171e66b68ccb24469d632af59b028b34717e06bd5201c3aebadd8f0c69425b17fc3e4eeadbad2f00ff5d
 EBUILD spring-1.1.3.ebuild 731 SHA256 c12c7f2c2d88ac7cd40db9eacdf62c827137eefe17616934ff44ff2bf1adcc06 SHA512 ae62c6738bffe7ba595131c2c12f526e71806324bbb8bcf5ce9c6edc34809aff16e360b196f75d8eba3d7aa6c3627ff3aca44f1bfbdcdfa2fe8484e72af48689 WHIRLPOOL 2c1f13fdc832c2bc12f48314ef864cd78ecd65de7d9d6dd6c8c132e44ac237df9c172a4898486f7954d5acfa5bd26568b579e1f98791f48958a1525cb3a8463b
 EBUILD spring-1.3.4.ebuild 811 SHA256 970e195c29ec05ae8967c61fc690723e8b12d0086b79928625590b3e268c5362 SHA512 4c731f3ab0484d3567ffb042a6d6cc376e2edaa9504b86da17cc332a22ca4fa3bf17f983941eddd4bdca59d8e7d45df81b370ebd88c6406b0384574ee40504f0 WHIRLPOOL ad36b63ce9577e3cae0f93b7a4007346289dab8db7f0746c925ac148397d26c5286307ec77917eb00ef726a4907d6b474ec11185a913a1a3942f89cd39c55cbe
-MISC ChangeLog 587 SHA256 8f242fd2da8c208786e795c8310d523a72e52b33d7fa737f0575e56d231b398a SHA512 b8a28a4a152e0d37b4f984926e32b196a46799552fcfe34b939483765ce4a964d066ee8d010675813c79077e29b7165d719913956d11e73a647529ce51d6215d WHIRLPOOL f198ba721382084ea8bb8c99a57e5a436e7925d1b207758437b49422afee35d3f1fb131103fd2cce1c698aaa2ef49fc3ac5a4005acb29a6ff89b075a83d50bea
+EBUILD spring-1.3.6.ebuild 811 SHA256 55530c7f175498f12df297895d2a6e14529cf66535b238d7a7a535d70eef5bbd SHA512 9aea9c51b3cf952f59f6be72204f0827c1a6f6ff15aeafc32675fedcc0b1a034774685533a25829f1d60940a22dd8742ddedb1d733e3ad7e77c159079b65ff6a WHIRLPOOL 65c7f33d43f8995fe6a050d22e7fc14f6c30d2aa9f9dc70184e20aa1dfb9973d1026164333e1919959f65b0b25e34849dfdb1287829606c32addf463496417f6
+MISC ChangeLog 705 SHA256 535efdf6121db4492a815e3e4300dc4f3b02ad34a5fc60c111473cca2ade6aa5 SHA512 9938c6d0d9ddd81ab502989254458e3ff5767809273c20c826d3023e99b4ce4862012185e6e34677655220d5de37aa7d1abcfb16dc328a13663d1f250256a880 WHIRLPOOL 31cc967d505793b3848c647396452098c4c7f2cb655e239c415d32f6de6449ec9ab6b03cd5b7f476df5d01d0f78f60f49563c8718deb8c157ead57bcb16d8960
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlUwnWIACgkQiIP6VqMIqNfthwD6AvHjYVjvVGbnqeh0ql6Ek3md
-3MQas9xSHUAC/DGleZkA/1iiJMCuiZGlOQJakvJAuk4//IgEZ90lBgY7XFYgHmwo
-=Ve42
+iF4EAREIAAYFAlVR64EACgkQiIP6VqMIqNemkgD9FCntPWLeI4yQp7DqT3HYfwVQ
+ksBohhMrRcCp3r7hheUA/36rvmlUEBv7J9M87ki4hpHwS8UPfjE36RP5YUx22d8U
+=fIND
 -----END PGP SIGNATURE-----
