@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare setup test unpack
+DEPEND=test? ( ruby_targets_ruby19? ( >=dev-ruby/rubygems-2.1.0[ruby_targets_ruby19] ) ruby_targets_ruby20? ( >=dev-ruby/rubygems-2.1.0[ruby_targets_ruby20] ) ruby_targets_ruby21? ( >=dev-ruby/rubygems-2.1.0[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( test? ( dev-ruby/bundler[ruby_targets_ruby19] dev-ruby/activesupport[ruby_targets_ruby19] virtual/ruby-minitest[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/bundler[ruby_targets_ruby20] dev-ruby/activesupport[ruby_targets_ruby20] virtual/ruby-minitest[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( dev-ruby/bundler[ruby_targets_ruby21] dev-ruby/activesupport[ruby_targets_ruby21] virtual/ruby-minitest[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( test? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/rake[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( dev-ruby/rake[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) )
+DESCRIPTION=Rails application preloader
+EAPI=5
+HOMEPAGE=https://github.com/rails/spring
+IUSE=test elibc_FreeBSD ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 test test
+KEYWORDS=~amd64
+LICENSE=MIT
+RDEPEND=ruby_targets_ruby19? ( >=dev-ruby/rubygems-2.1.0[ruby_targets_ruby19] ) ruby_targets_ruby20? ( >=dev-ruby/rubygems-2.1.0[ruby_targets_ruby20] ) ruby_targets_ruby21? ( >=dev-ruby/rubygems-2.1.0[ruby_targets_ruby21] ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] )
+REQUIRED_USE=|| ( ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 )
+SLOT=1.1
+SRC_URI=https://github.com/rails/spring/archive/v1.3.6.tar.gz -> spring-1.3.6.tar.gz
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	java-utils-2	f7dce580d4098b526be3fa17d4242820	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	ruby-fakegem	d4f8591e9b20b106327e9d143eb13da5	ruby-ng	c79a9fd7644eefe8009be02a82648e1f	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=8e7e3ef4ac1cf9fb1999e80cf7d0cb14
