@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/spring
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/spring/ChangeLog,v 1.3 2015/04/17 05:42:52 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/spring/ChangeLog,v 1.4 2015/05/12 12:00:59 graaff Exp $
+
+*spring-1.3.6 (12 May 2015)
+
+  12 May 2015; Hans de Graaff <graaff@gentoo.org> +spring-1.3.6.ebuild:
+  Version bump.
 
 *spring-1.3.4 (17 Apr 2015)
 
